# dmlog

./: CMakeLists.txt  FILE_TRANSFER.md  IMPLEMENTATION_SUMMARY.md  README.md  dmlog.dmr  manifest.dmm
.github/workflows/: ci.yml  release.yml
include/: dmlog.h
src/: dmlog.c  dmlog_registrations.c
tests/: CMakeLists.txt  README.md  dmod_test_stubs.c  test_app_interactive.c  test_automated_gdb.sh  test_benchmark.c  test_common.h  test_dmlog_unit.c  test_dmod_input_api.c  test_file_transfer.c  test_file_transfer_e2e.c  test_file_transfer_gdb.sh  test_input.c  test_monitor_app.c  test_monitor_gdb.sh  test_monitor_gdb_basic.sh  test_simple.c
tests/scenarios/: test_file_bidirectional.txt  test_file_recv.txt  test_file_send.txt  test_input_multiple.txt  test_input_single.txt  test_mixed_complex.txt  test_output_only.txt
tools/monitor/: CMakeLists.txt  README.md  backend.c  backend.h  gdb.c  gdb.h  gdbserver.c  gdbserver.h  main.c  monitor.c  monitor.h  openocd.c  openocd.h  trace.c  trace.h
